# qiq-html2md

./: .gitignore  README.md  SKILL.md  manifest.yaml  pyproject.toml
docs/: architecture_design.md  architecture_diagram.puml  functional_spec.md  observability.md  skill_contract.md
schemas/: request.schema.json  response.schema.json
src/html2md_skill/: __main__.py  build.py
src/html2md_skill/core/: errors.py  pipeline.py  types.py
src/html2md_skill/infra/: browser.py  browser_pool.py  cache.py  html_attrs.py  http.py
src/html2md_skill/obs/: events.py
src/html2md_skill/stages/: emit.py  enrich.py  extract.py
src/qiq_html2md/: __init__.py  __main__.py  build.py  quality.py
src/qiq_html2md/adapters_site/: arxiv.py  base.py  jats.py  pmc.py
src/qiq_html2md/core/: budget.py  pipeline.py  types.py
src/qiq_html2md/infra/: browser.py  browser_pool.py  cache.py  fs_sandbox.py  http.py  preflight.py
src/qiq_html2md/obs/: events.py  metrics.py
src/qiq_html2md/stages/: acquire.py  emit.py  enrich.py  extract.py
tests/: conftest.py  test_adapters.py  test_algorithm_listing.py  test_budget.py  test_build.py  test_cli.py  test_complex_table_fallback.py  test_contract_fixes.py  test_core_types.py  test_http.py  test_image_url_resolution.py  test_mvp_smoke.py  test_obs_and_sandbox.py  test_phase2_features.py  test_phase3_quality_retry.py  test_phase4_browser_fallback.py  test_phase5_infra.py  test_preflight.py  test_quality_pgf_leak.py  test_quality_v02_enhancements.py  test_url.txt
tests/fixtures/: arxiv_sample.html  paper_rich.html  phase4_complex.html
